# Qurve-Project

./: .env.example  .gitignore  AWS_INTEGRATION_RECOVERY_REPORT.md  FINAL_PLATFORM_ACTIVATION_REPORT.md  PLATFORM_RELEASE_LOCK_v1.md  README.md  REAL_AWS_VALIDATION_REPORT.md  SCIENTIFIC_SEMANTICS_LOCK_v1.md  activate_cloud_execution.py  activate_website_execution.py  api_execution_flow_validation.py  architecture_freeze_v1.md  backend_boot_validation.py  braket_api_direct_test.py  check_hamiltonian_scale.py  check_worker.py  configuration_consolidation.py  debug_braket_api.py  end_to_end_validation.py  final_platform_hardening_audit.py  fix_python_environment.py  fixed_braket_discovery_test.py  install_dependencies.py  minimal_boto3_test.py  minimal_braket_test.py  minimal_cloud_execution_test.py  package-lock.json  package.json  platform_import_validation.py  platform_syntax_validation.py  pre_activation_cloud_verification.py  production_deployment_validation.py  simple_braket_test.py  test_python_imports.py  working_braket_test.py  working_cloud_execution_test.py
qubo-backend/: COMPREHENSIVE_VALIDATION_REPORT.md  Dockerfile.frontend  FINAL_VALIDATION_REPORT.md  VALIDATION_REPORT.md  async_audit.py  async_integration_test.py  async_safety_test.py  auth.py  benchmark_stability_test.py  bootstrap.py  bounded_convergence_test.py  braket_integration_test.py  ci_audit.py  cloud_validation.py  cost_validation.py  credential_validation.py  debug_type_error.py  exhaustive_audit.py  final_braket_validation.py  final_operational_certification.py  final_product_readiness_audit.py  (+56 more)
(+330 files in other folders)
