[project]
name = "qubo-portfolio-backend"
version = "1.2.0"
description = "Enterprise-grade quantum-ready QUBO portfolio optimization backend"
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "yfinance>=0.2.28",
  "scikit-learn>=1.3.0",
  "torch>=2.1.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "python-dotenv>=1.0.0",
  "dimod>=0.12.0",
  "dwave-neal>=0.6.0",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "passlib[bcrypt]",
  "python-jose[cryptography]",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "slowapi>=0.1.9",
  "pyqubo>=1.5.0",
  "cryptography>=41.0.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
quantum = [
  "dwave-ocean-sdk>=8.0.0",
  "qiskit>=2.3.0",
  "qiskit-algorithms>=0.3.0",
  "qiskit-optimization>=0.7.0",
  "qiskit-ibm-runtime>=0.43.0",
]
gpu = [
  "torch>=2.1.0",
  "cupy-cuda11x>=12.0.0",
  "pynvml>=11.4.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.7.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "bandit>=1.7.0",
  "safety>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["qubo_backend"]

